# a500_2024

./: .buildinfo  .gitignore  LICENSE  README.md  _config.yml  _toc.yml  _toc_safe.yml  doit.sh  environment.yml  genindex.html  index.html  index.md  learning_goals.html  objects.inv  pyproject.toml  python_install.html  python_install.md  requirements.txt  schedule.html  schedule.md  search.html  searchindex.js  week_notes.html  week_notes.md
_sources/: index.md  learning_goals.md  learning_goals.rst  python_install.md  schedule.md  week_notes.md
assignments/: dry_les_2024_solution.html  dry_les_2024_solution.md  hydrostatic_2024.html  hydrostatic_2024.ipynb  hydrostatic_2024.md  md_dry_les.html  md_dry_les.ipynb
docs/: boussinesq.tex  ensemle_averaging.tex  hydro.pstex_t  hydro.tex  lagrangian_eulerian.tex  liebniz.tex  mixed_layer.tex  mixed_layer_jump.tex  pressure_perturb.tex  stationarity.tex  surface_layer.tex  taylor_series.tex  thermo.tex  velocity_scales.tex  virtual_temperature.tex
notebooks/: backup.txt  businger_dyer.html  businger_dyer.ipynb  bussinger_dyer.ipynb  cabauw_fit.ipynb  clausius_claphyron_rootfind.html  clausius_claphyron_rootfind.ipynb  clausius_claphyron_rootfind.md  dry_les_2024.html  dry_les_2024.ipynb  dry_les_2024.md  dry_les_2024_partII.html  dry_les_2024_partII.ipynb  dry_les_2024_partII.md  dry_mixed_layer.html  dry_mixed_layer.ipynb  dry_mixed_layer.md  dry_mixed_layer.py  fft_2d-filter.ipynb  fft_2d.ipynb  fft_2d_filter.html  fft_2d_filter.ipynb  fft_2d_filter.md  fft_dissipation.html  fft_dissipation.ipynb  fft_dissipation.md  (+19 more)
(+217 files in other folders)
